added documentation for brands
